--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <meta name="description" content="This page contains all the course assignments for the semester.">
 </head>
 <body>
-    <h1>Kylee Brost</h1>
+    <h1>Kylee K. Brost</h1>
 </body>
 </html>
