--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Page</title>
     <meta name="description" content="This page contains all the course assignments for the semester.">
+    <link rel="stylesheet" href="./css/index.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap');
+    </style>
 </head>
 <body>
-    <h1>Kylee K. Brost</h1>
+    <header>
+        <h1 class="header">Kylee Brost</h1>
+    </header>
+    <section>
+        <div class="row">
+            <div class="column left">
+                <h2>WDD 230: Assignment Portal</h2>  
+                <hr>
+                <ul>
+                  <li>Lesson 02: <a href="https://brostkyl.github.io/">Assignment Link</a></li>
+                  <li>Lesson 03: <a href="#">Assignment Link</a></li>
+                  <li>Lesson 03: <a href="#">Link</a> | <a href="#">Link</a></li>
+                </ul>
+            </div>
+            <div class="column right"> 
+                 <img src="./i/picture.JPGresized.JPG" alt="self-portrait">
+            </div> 
+    </div>
+    </section>
+    <footer>
+        <p>2020 | Kylee Brost | BYU-Idaho <br> <strong>Last Updated 02/12/2021</strong></p>
+    </footer>
 </body>
 </html>
