--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     </section>
     <footer>
-        <p>2020 | Kylee Brost | BYU-Idaho <br> <strong>Last Updated 02/12/2021</strong></p>
+        <p>2020 | Kylee Brost | Idaho | BYU-I <br> <strong>Last Updated 02/12/2021</strong></p>
     </footer>
 </body>
 </html>
