last updated added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
     </div>
     </section>
     <footer>
-        <p>2020 | Kylee Brost | Idaho | BYU-I <br> <strong>Last Updated 02/13/2021</strong></p>
+        <p>2020 | Kylee Brost | Idaho | BYU-I <br>
+             <strong>Last Updated
+                 <script>
+                     document.write(document.lastModified)
+                 </script>
+             </strong>
+        </p>
     </footer>
 </body>
 </html>
