--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Page</title>
     <meta name="description" content="This page contains all the course assignments for the semester.">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap');
     </style>
