--- a/lesson 2/design-principles.html
+++ b/lesson 2/design-principles.html
@@ -6,7 +6,7 @@
     <title>Portal Page</title>
     <meta name="description" content="This page contains all the course assignments for the semester.">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="lesson 2\design.css">
+    <link rel="stylesheet" href="./lesson2/design.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap');
     </style>
@@ -17,15 +17,18 @@
         <section>
             <h2>Hick's Law</h2>
             <h3><a href="https://koox.co.uk/home">Slavery Footprint</a></h3>
+            <img src="lesson2\i\Screenshot_20210302-200641_Chrome.jpg" alt="Slavery Footprint Mobile View">
             <p>Slavery Footprint does an exemplary job of using Hicks Law well. They keep it as simple as possible by only giving the visitor one or two options as soon as they click on the site. On large screens they are given two and on mobile screens, they only have one option. This draws you into the site and makes you want to continue. It is not overwhelmingly full of information the moment you visit the site. </p>
         </section>
         <section>
             <h2>Whitespace</h2>
             <h3><a href="https://www.zillow.com/">Zillow</a></h3>
+            <img src="lesson2\i\Screenshot_20210302-201716_Chrome.jpg" alt="Zillow Mobile View">
             <p>Zillow does a great job of creating enough white space on their website for their content to breathe. The large search bar in the center of their header has plenty of white space around it in both the large and small screen views. If you scroll down you can see that great use of white space continues throughout the site on all buttons and columns. </p></section>
         <section>
             <h2>Repetition</h2>
             <h3><a href="https://koox.co.uk/home">Koox</a></h3>
+            <img src="lesson2\i\Screenshot_20210303-081623_Chrome.jpg" alt="Koox Mobile View"> 
             <p>Koox does a fantastic job of using repetition on their site to make all of the individual pages feel complete and yet part of a bigger whole. For starts the created  simple background design out of their logo and uses it as the header background all of their page, implementing the different colors in their colorscheme to ensure that it does not feel overused. Along with sticking to the same color scheme throughout the site they made sure to use the dark green color as the accent color for almost everything. This was the perfect choice because their site is light and airy so the bold green contrasts it nicely. They also used the same font across their pages and chose to add contrast through weight and color rather than adding another font.Their use of repetition really makes the site feel cohesive. </p>
         </section>
     </main>
