--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <h2>WDD 230: Assignment Portal</h2>  
                 <hr>
                 <ul>
-                  <li>Lesson 02: <a href="https://brostkyl.github.io/">Assignment Link</a></li>
-                  <li>Lesson 03: <a href="#">Assignment Link</a></li>
-                  <li>Lesson 03: <a href="#">Link</a> | <a href="#">Link</a></li>
+                  <li>Lesson 02: <a href="https://brostkyl.github.io/lesson2/design-principles.html">Assignment Link</a></li>
+                  <li>Lesson 03: <a href="https://brostkyl.github.io/">Assignment Link</a></li>
+                  <li>Lesson 03: <a href="https://brostkyl.github.io/">Link</a> | <a href="#">Link</a></li>
                 </ul>
             </div>
             <div class="column right"> 
