--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <hr>
                 <ul>
                   <li>Lesson 02: <a href="https://brostkyl.github.io/lesson2/design-principles.html">Assignment Link</a></li>
-                  <li>Lesson 03: <a href="https://brostkyl.github.io/">Assignment Link</a></li>
-                  <li>Lesson 03: <a href="https://brostkyl.github.io/">Link</a> | <a href="#">Link</a></li>
+                  <li>Lesson 03: <a href="https://brostkyl.github.io/lesson3/index.html">Assignment Link</a></li>
+                  <li>Lesson 04: <a href="https://brostkyl.github.io/">Link</a> | <a href="#">Link</a></li>
                 </ul>
             </div>
             <div class="column right"> 
