--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -12,8 +12,9 @@
         @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     </style>
 </head>
+<body>
 <header>
-     <img class="logo" src="./images/logo.png" alt="WeatherWise Logo" width="150px">
+     <img class="logo" src="./images/logo.png" alt="WeatherWise Logo">
      <nav>
         <uL>
             <li><a href="index.html">Home</a></li>
@@ -23,7 +24,7 @@
         </uL>
      </nav>
 </header>
-<body>
+<main>
     <section>
         <h1>Target Audience</h1>
             <p> Those looking for current weather updates in the Preston, Soda Springs, and Fish Haven areas.</p>
@@ -40,5 +41,6 @@
                 <li>Will it be sunny? Should I bring sunglasses for my walk?</li>
             </ol>
     </section>
+</main>
 </body>
 </html>
