--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -12,8 +12,9 @@
         @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     </style>
 </head>
+<body>
 <header>
-     <img class="logo" src="./images/logo.png" alt="WeatherWise Logo" width="150px">
+     <img class="logo" src="./images/logo.png" alt="WeatherWise Logo">
      <nav>
         <uL>
             <li><a href="index.html">Home</a></li>
@@ -23,7 +24,7 @@
         </uL>
      </nav>
 </header>
-<body>
+<main>
     <section>
         <h1>Color Scheme</h1>
         <h2>Dark Teal: #093533 </h2>
@@ -35,5 +36,6 @@
         <h2>Light Teal: #0a4140</h2>
         <p>Headings and navigation hover color</p>
     </section>
+</main>
 </body>
 </html>
